# TinyWasmJIT

./: CMakeLists.txt  CMakeUserPresets.json  byte _code.md  conanfile.txt
.github/workflows/: ci.yml
src/: CMakeLists.txt  main.cpp
src/Utils/: TestTool.cpp  TestTool.h
test/: CMakeLists.txt  testMain.cpp
